--- a/index.html
+++ b/index.html
@@ -54,36 +54,36 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="images/arpit.jpg" alt="Arpit" style="width:100%">
       <h3>Arpit Sharma</h3>
-      <p class="w3-opacity">Team Leader</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p class="w3-opacity">Team Member</p>
+      <p>101908072</p>
       <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
         <img src="images/akshit.jpg" alt="Akshit" style="width:100%">
         <h3>Akshit Pandey</h3>
         <p class="w3-opacity">Team Member</p>
-        <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        <p>101908076</p>
         <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
         <img src="images/tanmay.jpg" alt="Tanmay" style="width:100%">
         <h3>Tanmay</h3>
         <p class="w3-opacity">Team Member</p>
-        <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        <p>101908075</p>
         <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="images/uday.jpg" alt="Uday" style="width:100%">
-      <h3>Uday Veer Singh</h3>
+      <h3>UdayVeer Singh</h3>
       <p class="w3-opacity">Team Member</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>101908073</p>
       <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="images/rishav.jpg" alt="Rishav" style="width:100%">
       <h3>Rishav Jindal</h3>
       <p class="w3-opacity">Team Member</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>101908074</p>
       <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
     </div>
     
