--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>The purpose of this project is to conceive an automated mechanical wheelchair that embodies the pinnacle of
+    <p>The purpose of this project is to conceive an mechanical wheelchair that embodies the pinnacle of
     engineering ingenuity, with an unwavering emphasis on the paramount tenets of safety, mechanism functionality,
     wheelchair functionality, and geometry. Our objective is to engineer a standing wheelchair that is imbued with a level
     of sophistication that exceeds all expectations, resulting in an unrivaled experience for the user.
